Do not activate UnifiedSystemTray by default.

This CL stops activating UnifiedSystemTray bubble by default, which is
the same behavior as old SystemTray. At the beginning of the
implementation it took that approach for simplicity, but it was
planned to stop this. Activating system tray by default also leads to
some artifact such as flickering.

TEST=manual
BUG=847732

Change-Id: I4112492bc8b8783667ce111220aab36bbd7eeac2
Reviewed-on: https://chromium-review.googlesource.com/1080476
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#563246}
Former-commit-id: d5d446edbf3ab83b025a32ec86985fdfd3cc619d